--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ li {
   flex: 0 0 33%;
   min-width: 304px;
   width: 33%;
-  margin: 0 20px 0 0;
+  margin: 0 20px 20px 0;
   text-decoration: none;
   box-shadow: -20px 20px 60px #abacad, 20px -20px 60px #ffffff;
 }
@@ -192,6 +192,25 @@ button:disabled {
 }
 .card.checkout-style-background:hover {
   box-shadow: 20px 20px 60px #614b91, -20px -20px 60px #bd91ff;
+}
+.cart-style-background {
+  background: teal;
+  transition: box-shadow var(--transition-duration);
+}
+.card.cart-style-background:hover {
+  box-shadow: 20px 20px 60px teal, -20px -20px 60px teal;
+}
+
+/* Products */
+.products {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 3rem;
+}
+
+.product img {
+  max-width: 100%;
 }
 
 /* Code block */
